GCP release - nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,34 +1,85 @@
+# server {
+#     listen 80;
+#     server_name localhost;
+#     root /usr/share/nginx/html;
+#     index index.html;
+
+#     # SPA routing
+#     location / {
+#         try_files $uri $uri/ /index.html;
+#     }
+
+#     # API 프록시 설정
+#     location /api/ {
+#         # 1. DNS 서버 설정 (Cloud Run 필수)
+#         resolver 8.8.8.8;
+
+#         # 2. 백엔드 주소를 변수로 설정 (실패 시 재시도 방지용)
+#         set $backend_url https://ddyeo-backend-1003047877852.asia-northeast3.run.app;
+
+#         proxy_pass $backend_url; # 끝에 슬래시를 넣지 마세요 (/api가 포함되어 전달됨)
+        
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection 'upgrade';
+        
+#         # 3. 중요: 백엔드 서비스의 실제 호스트명을 직접 적어줍니다.
+#         proxy_set_header Host ddyeo-backend-1003047877852.asia-northeast3.run.app;
+        
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+
+#     # 정적 자원 캐싱 및 Gzip 압축은 정우님 코드 그대로 유지하시면 됩니다.
+#     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+#         expires 1y;
+#         add_header Cache-Control "public, immutable";
+#     }
+
+#     gzip on;
+#     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+# }
+
 server {
     listen 80;
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
 
-    # SPA routing - always serve index.html for any route
+    # 1. 용량 제한 해제 (50MB)
+    client_max_body_size 50M;
+
+    # SPA routing
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # API proxy (adjust the backend URL as needed)
+    # API 프록시 설정
     location /api/ {
-        proxy_pass http://backend:8000/api/;
+        resolver 8.8.8.8;
+        set $backend_url https://ddyeo-backend-1003047877852.asia-northeast3.run.app;
+        
+        proxy_pass $backend_url;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
+        
+        # 중요: 백엔드 서비스의 실제 호스트명
+        proxy_set_header Host ddyeo-backend-1003047877852.asia-northeast3.run.app;
+        
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
     }
 
-    # Cache static assets
+    # 정적 자원 캐싱
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # Gzip compression
+    # Gzip 압축
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 }
